--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -49,7 +49,7 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -143,7 +143,6 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
                             android:gravity="center"
                             android:text="@string/product_information_tittle"
                             android:textColor="@color/salem_1"
@@ -216,16 +215,31 @@
                             android:textColor="@color/grey_mid"
                             android:textSize="14sp"
                             android:textStyle="bold" />
-                        <TextView
-                            android:id="@+id/weightTV"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="30sp"
-                            android:layout_marginBottom="15dp"
-                            android:hint="@string/your_data_in_here"
-                            android:textColor="@color/black"
-                            android:textSize="17sp"
-                            android:textStyle="normal" />
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/weightTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="30sp"
+                                android:layout_marginBottom="15dp"
+                                android:hint="@string/weight_data"
+                                android:textColor="@color/black"
+                                android:textSize="17sp"
+                                android:textStyle="normal" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="5sp"
+                                android:layout_marginBottom="5dp"
+                                android:text="@string/gram"
+                                android:textColor="@color/black"
+                                android:textSize="17sp"
+                                android:textStyle="normal" />
+                        </LinearLayout>
+
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -286,7 +300,6 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
                             android:gravity="center"
                             android:text="@string/shallot_planting_information"
                             android:textColor="@color/salem_1"
@@ -456,7 +469,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="7dp"
-                android:scrollbars="vertical"/>
+                android:scrollbars="none"
+                android:isScrollContainer="true"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -498,6 +512,6 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
