--- a/app/src/main/res/layout/activity_detail_upload.xml
+++ b/app/src/main/res/layout/activity_detail_upload.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailActivity">
+    tools:context=".DetailUploadActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
@@ -480,19 +480,19 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/addDataBtn"
-                    android:layout_width="170dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_round_1"
-                    android:layout_marginBottom="10dp"
-                    android:clickable="true"
-                    android:text="@string/add_data"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:focusable="true" />
+<!--                <androidx.appcompat.widget.AppCompatButton-->
+<!--                    android:id="@+id/addDataBtn"-->
+<!--                    android:layout_width="170dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:background="@drawable/btn_round_1"-->
+<!--                    android:layout_marginBottom="10dp"-->
+<!--                    android:clickable="true"-->
+<!--                    android:text="@string/add_data"-->
+<!--                    android:textAllCaps="false"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:textSize="16sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:focusable="true" />-->
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/downloadQrCodeBtn"
