--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -59,6 +60,7 @@
             android:backgroundTint="@color/salem_2"
             android:contentDescription="TODO"
             android:src="@drawable/ic_add"
+            app:maxImageSize="40dp"
             app:borderWidth="0dp"
             app:fabSize="auto"
             app:tint="@color/white" />
