--- a/app/src/main/res/layout/activity_traceability_list.xml
+++ b/app/src/main/res/layout/activity_traceability_list.xml
@@ -71,8 +71,12 @@
             android:background="@color/white"
             android:layout_weight="1"/>
 
+<!--        <FrameLayout-->
+<!--            android:id="@+id/fragment_Upload"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="1" />-->
     </LinearLayout>
-
 
 
 <!--    <LinearLayout-->
