--- a/app/src/main/res/layout/activity_add_traceability.xml
+++ b/app/src/main/res/layout/activity_add_traceability.xml
@@ -229,6 +229,27 @@
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/noteLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
+                android:hint="@string/notes_ET"
+                app:boxStrokeColor="@color/salem_1"
+                app:errorEnabled="true"
+                app:hintTextColor="@color/salem_1">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/noteEt"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:inputType="textMultiLine"
+                    android:maxLines="6"
+                    android:gravity="top"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
 <!--            <com.google.android.material.textfield.TextInputLayout-->
 <!--                android:id="@+id/fertilizerLayout"-->
 <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
